--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="container login-container rainbow-border">
         
         <!--- HEY !!!!!!!! whats up nerd, firstly im happy you understand basic html but am also quite dissapointed-->
-        <!--- i, yasemin, am dissapointed that you are trying to skip the video and waiver that contain important info and good reminders-->
+        <!--- i, Katie, am dissapointed that you are trying to skip the video and waiver that contain important info and good reminders-->
         <!--- before you click this link, remember it constitues a binding signature to the waiver you may have not read-->
         <!--- so id strongly encourage you to watch the video and read the waiver, we worked hard on them and on making eweek fun and safe for everyone, this being one of the ways-->
         <iframe src="https://forms.gle/GbfxZA8YGeGapFtp7" width="640" height="872" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
