--- a/index.html
+++ b/index.html
@@ -47,21 +47,13 @@
       </div>
     </header>
 
-    <!-- Login Section -->
-    <section id="login" class="content-section text-center">
-      <div class="container login-container rainbow-border">
-        </form>
-        <button type="submit" onclick="login()" class="btn login-btn rainbow">Begin</button>
-      </div>
-    </section>
-
     <!-- Form section -->
-    <header class="waiverhead hide">
+    <header class="waiverhead">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mx-auto">
             <video oncontextmenu="return false;" id="waiverVideo" onended="videoEnd()" ontimeupdate="progressBar()">
-              <source src="./eweekvideo.mp4" type="video/mp4"><!--E-Week%202020%20Participant%20Video%20-%20captioned-->
+              <source src="./waiver_video/eweekvideo.mp4" type="video/mp4"><!--E-Week%202020%20Participant%20Video%20-%20captioned-->
             </video>
             <p><i><sup>*</sup>You must finish watching the video to continue</i></p>
           </div>
